--- a/ewdLite/ewd/demo/index.html
+++ b/ewdLite/ewd/demo/index.html
@@ -11,8 +11,8 @@
      <script src='/ext-4.2.1/ext-all-debug.js' type='text/javascript'></script>
     -->
      <script src='http://cdn.sencha.io/ext-4.1.1-gpl/ext-all-debug.js' type='text/javascript'></script>
-     <script src="/js/tony/ui.js" type="text/javascript"></script>
-     <script src="/js/tony/app.js" type="text/javascript"></script>
+     <script src="/js/demo/ui.js" type="text/javascript"></script>
+     <script src="/js/demo/app.js" type="text/javascript"></script>
      <title>EWD Lite Demo Application</title>
 
  <!--[if (IE 6)|(IE 7)|(IE 8)]><script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script><![endif]-->
