--- a/ewdLite/www/ewd/ewdMonitor/importer.html
+++ b/ewdLite/www/ewd/ewdMonitor/importer.html
@@ -1,4 +1,4 @@
-<div class="row" id="importPageLoaded">
+<div class="row" id="importerPageLoaded">
   <div class="col-md-12">
     <h1>Import JSON to Persistent Storage</h1>
     <div id="jsonFormDiv">
