--- a/ewdLite/www/ewd/ewdMonitor/index.html
+++ b/ewdLite/www/ewd/ewdMonitor/index.html
@@ -2,14 +2,15 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
 
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
-    <meta http-equiv="Pragma" content="no-cache"/>
-    <meta http-equiv="Expires" content="0"/>
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-touch-fullscreen" content="yes" />
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="author" content="Rob Tweed" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="author" content="Rob Tweed">
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css" rel="stylesheet" />
@@ -22,12 +23,6 @@
     <link href="bp.css" rel="stylesheet" />
     <link href="examples.css" rel="stylesheet" />
 -->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-
 
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="//ematic-solutions.com/cdn/bootstrap/2.3.1/ico/favicon.png" />
@@ -86,6 +81,12 @@
       }
 
     </style>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
     
   </head>
 
@@ -134,7 +135,7 @@
                   <li id="memory_Nav" data-header="memory"><a href="#">Memory</a></li>
                   <li id="sessions_Nav" data-header="sessions"><a href="#">Sessions</a></li>
                   <li id="db_Nav" data-header="db"><a href="#">Persistent Objects</a></li>
-                  <li id="import_Nav" data-header="import"><a href="#">Import</a></li>
+                  <li id="importer_Nav" data-header="import"><a href="#">Import</a></li>
                   <li id="about_Nav" data-header="about"><a href="#">About</a></li>
                 </ul>
               </div>
@@ -302,7 +303,7 @@
       <div id="db_Container" class="container collapse"></div>
 
       <!-- import CONTAINER -->
-      <div id="import_Container" class="container collapse"></div>
+      <div id="importer_Container" class="container collapse"></div>
 
       <!-- about CONTAINER -->
       <div id="about_Container" class="container collapse"></div>
