--- a/ewdLite/www/ewd/bootstrap3/main.html
+++ b/ewdLite/www/ewd/bootstrap3/main.html
@@ -1,7 +1,7 @@
 <div class="row" id="mainPageLoaded">  <!-- *** change Id to [pageName]PageLoaded -->
   <div class="col-md-12">
-    <h1>Main Page Title</h1> <!-- *** change title as needed -->
-    <div>
+    <h1 id="mainTitle">Main Page Title</h1> <!-- *** change title as needed -->
+    <div id="mainContent">
       <!-- page content goes here -->
     </div>
   </div>
