Build 54.4: Enhancements to supporting applications and demos

--- a/ewdLite/www/ewd/VistADemo/index-ie.html
+++ b/ewdLite/www/ewd/VistADemo/index-ie.html
@@ -12,10 +12,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="author" content="Rob Tweed">
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.min.css" rel="stylesheet" />
-    <link href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
+    <link href="/jquery-ui-1.10.4/development-bundle/themes/ui-lightness/jquery-ui.css" rel="stylesheet" />
 
 
     <!-- Fav and touch icons -->
@@ -135,9 +135,9 @@
     <div id="patientSelectionPanel" class="modal fade"></div>
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="//code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="/jquery/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-    <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/bootstrap-3.0.0/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.min.js"></script>
 
