--- a/ewdLite/www/ewd/ewdEncrypter/index.html
+++ b/ewdLite/www/ewd/ewdEncrypter/index.html
@@ -2,21 +2,24 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="author" content="Rob Tweed">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="author" content="Rob Tweed" />
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="//cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css" rel="stylesheet" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.min.css" rel="stylesheet" />
     <link href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
 
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="//ematic-solutions.com/cdn/bootstrap/2.3.1/ico/favicon.png" />
@@ -78,20 +81,11 @@
       }
 
     </style>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="/respond/html5shiv.js"></script>
-      <script src="/respond/respond.js"></script>
-    <![endif]-->
     
   </head>
 
   <body>
 
-    <!-- Modal Login Form -->
-
-    <div id="loginPanel" class="modal fade"></div>
 
     <!-- Main Page Definition -->
 
@@ -119,28 +113,17 @@
       <!-- main CONTAINER -->
       <div id="main_Container" class="container in" style="display: none"></div>
 
-      <!-- terminal CONTAINER -->
-      <div id="terminal_Container" class="container collapse"></div>
-
       <!-- about CONTAINER -->
       <div id="about_Container" class="container collapse"></div>
 
     </div>
 
-    <!-- Modal info panel -->
-    <div id="infoPanel" class="modal fade"></div>
-
-    <div id="confirmPanel" class="modal fade"></div>
-
-    <div id="patientSelectionPanel" class="modal fade"></div>
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="//code.jquery.com/jquery-latest.js"></script>
     <script type="text/javascript" src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.min.js"></script>
-
     <script src="/ewdLite/EWD.js"></script>
     <script type="text/javascript" src="/ewdLite/ewdBootstrap3.js"></script>
     
