--- a/ewdLite/www/ewd/chromecast/login.html
+++ b/ewdLite/www/ewd/chromecast/login.html
@@ -1,10 +1,10 @@
 <div class="modal-dialog">
   <div id="loginModalPanel" class="modal-content">
     <div class="modal-header">
-      <h3 id="ewd-loginPanel-title">Demo App</h3> <!-- *** Change title text as required -->
+      <h3 id="ewd-loginPanel-title">Chromecast Demo App</h3>
     </div>
     <div id="loginPanelBody" class="modal-body">
-      <legend>Please log in</legend>              <!-- *** Change Legend text as required -->
+      <legend>Please log in</legend> 
       <div class="form-group">
         <label for="username">Username: </label>
         <input type="text" class="form-control focusedInput" id="username" placeholder="Enter your username" />
